// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaWidget simple with errors 1`] = `
<div>
  <label
    className="block mb-1 text-color-danger"
    htmlFor="_id"
  >
    Some simple label
    *
  </label>
  <textarea
    autoFocus={true}
    className="p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable w-full p-invalid"
    disabled={false}
    id="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without errors 1`] = `
<div>
  <label
    className="block mb-1 text-color-danger"
    htmlFor="_id"
  >
    Some simple label
    *
  </label>
  <textarea
    autoFocus={true}
    className="p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable w-full p-invalid"
    disabled={false}
    id="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without required 1`] = `
<div>
  <label
    className="block mb-1 text-color-danger"
    htmlFor="_id"
  >
    Some simple label
  </label>
  <textarea
    autoFocus={true}
    className="p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable w-full p-invalid"
    disabled={false}
    id="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    readOnly={true}
    required={false}
    rows={5}
    value="value"
  />
</div>
`;
